// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PropertiesPanel should render when there are answers 1`] = `
<PropertiesPanel__PropertiesPane>
  <PropertiesPanel__PropertiesPaneBody>
    <ScrollPane
      permanentScrollBar={false}
    >
      <Accordion
        title="Optional fields"
      >
        <PropertiesPanel__Padding>
          <Apollo(UnwrappedQuestionProperties)
            page={
              Object {
                "__typename": "Page",
                "answers": Array [
                  Object {
                    "__typename": "Answer",
                    "id": "1",
                    "index": 0,
                    "type": "Number",
                  },
                  Object {
                    "__typename": "Answer",
                    "id": "2",
                    "index": 1,
                    "type": "TextField",
                  },
                ],
                "id": "1",
                "type": "Questionnaire",
              }
            }
          />
        </PropertiesPanel__Padding>
      </Accordion>
      <Accordion
        key="Answer1"
        title="NUMBER"
      >
        <PropertiesPanel__AnswerPropertiesContainer>
          <Apollo(AnswerProperties)
            answer={
              Object {
                "__typename": "Answer",
                "id": "1",
                "index": 0,
                "type": "Number",
              }
            }
            id="Answer1"
            onSubmit={[Function]}
          />
          <Connect(UnconnectedAnswerValidation)
            answer={
              Object {
                "__typename": "Answer",
                "id": "1",
                "index": 0,
                "type": "Number",
              }
            }
          />
        </PropertiesPanel__AnswerPropertiesContainer>
      </Accordion>
      <Accordion
        key="Answer2"
        title="TEXTFIELD"
      >
        <PropertiesPanel__AnswerPropertiesContainer>
          <Apollo(AnswerProperties)
            answer={
              Object {
                "__typename": "Answer",
                "id": "2",
                "index": 1,
                "type": "TextField",
              }
            }
            id="Answer2"
            onSubmit={[Function]}
          />
          <Connect(UnconnectedAnswerValidation)
            answer={
              Object {
                "__typename": "Answer",
                "id": "2",
                "index": 1,
                "type": "TextField",
              }
            }
          />
        </PropertiesPanel__AnswerPropertiesContainer>
      </Accordion>
    </ScrollPane>
  </PropertiesPanel__PropertiesPaneBody>
</PropertiesPanel__PropertiesPane>
`;

exports[`PropertiesPanel should render when there are no answers 1`] = `
<PropertiesPanel__PropertiesPane>
  <PropertiesPanel__PropertiesPaneBody>
    <ScrollPane
      permanentScrollBar={false}
    >
      <Accordion
        title="Optional fields"
      >
        <PropertiesPanel__Padding>
          <Apollo(UnwrappedQuestionProperties)
            page={
              Object {
                "__typename": "Page",
                "answers": Array [],
                "id": "1",
                "type": "Questionnaire",
              }
            }
          />
        </PropertiesPanel__Padding>
      </Accordion>
    </ScrollPane>
  </PropertiesPanel__PropertiesPaneBody>
</PropertiesPanel__PropertiesPane>
`;
